fix: update mini map focus when collapse left menu

--- a/src/app/editor/_components/building/index.module.css
+++ b/src/app/editor/_components/building/index.module.css
@@ -100,7 +100,7 @@
 .fixed {
   position: absolute;
   top: 0px;
-  right: 1px;
+  right: 3px;
 
   transform: scale(0.8);
   transform-origin: top right;
